Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.4, 11.5(EOL)
Description
Case:
SELECT HEX(INSERT(_utf8 0xD18FD18E, 2, 1, 0x20)); |
CREATE VIEW v1 AS SELECT HEX(INSERT(_utf8 0xD18FD18E, 2, 1, 0x20)); |
SELECT * FROM v1; |
DROP VIEW v1; |
Expected that result for the first select and select from view will be the same but this is not so:
Actual result:
SELECT HEX(INSERT(_utf8 0xD18FD18E, 2, 1, 0x20)); |
HEX(INSERT(_utf8 0xD18FD18E, 2, 1, 0x20)) |
D120D18E
|
 |
SELECT * FROM v1; |
HEX(INSERT(_utf8 0xD18FD18E, 2, 1, 0x20)) |
D120D1
|
Expected result:
SELECT * FROM v1; |
HEX(INSERT(_utf8 0xD18FD18E, 2, 1, 0x20)) |
D120D18E
|
Attachments
Issue Links
- is duplicated by
-
MDEV-31512 Cursor protocol cuts off the end of string with the utf8 character set in INSERT function
-
- Closed
-
- relates to
-
MDEV-27691
make working view-protocol
-
- Closed
-
-
MDEV-28651 quote(NULL) returns incorrect result in view ('NU' instead of 'NULL')
-
- Closed
-
-
MDEV-31512 Cursor protocol cuts off the end of string with the utf8 character set in INSERT function
-
- Closed
-